@@ -1,4 +1,4 @@
 DIST mico-2.3.12.tar.gz 2837502 RMD160 2f45ace5044233f171ac8e4fd389d523befaca51 SHA1 e1885362d559ea97c62a2437a1d3a94114ef5b05 SHA256 f67663962c0fabfb459e0c14027fcd3ab9d809ba69cabdf9399abe467b9bbf4f
-EBUILD mico-2.3.12.ebuild 1752 RMD160 62c1e21e677853cf37f0bfb6c85bd123a9cc7e54 SHA1 09d73def1862f91548f3ae57e8361dce0ee646d6 SHA256 b4e9c55454dc03080c81174c90706f0660f7a664608ec336aa2dba87fadca57d
-MISC ChangeLog 319 RMD160 37ec724648582dd25c6204e47857f365fe81101a SHA1 dc45489380ea734ea2bfa1e0252d544e232926dd SHA256 fb8b7cba06c00ddec49f9a19dda26733ff80051d9ee19aa93eabb5a55d6f7398
+EBUILD mico-2.3.12.ebuild 1394 RMD160 b7586a4093e805bf5924049b642aa2d6e6161d92 SHA1 e3800410abdc16c5a70e303c1a94c8d8784cd3c2 SHA256 264f4b250e845cce5fd6842ff17fc4a37acfbec0b9cf37a6d9883331fbfe6c47
+MISC ChangeLog 443 RMD160 f9be473114263d312fca5d6629e9c4da6be55f94 SHA1 b1da5d7058a2708797c7b2c223f8ed241c21f468 SHA256 20faf1d0d180287893fab90d457ecb67d7f4ff207e46bc53baff624a1aebe869
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
