@@ -1,17 +1,18 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mico/mico-2.3.11-r1.ebuild,v 1.1 2005/08/04 20:33:58 azarah Exp $
+# $Header: $
 
-inherit eutils
-
-IUSE="ssl tcl gtk postgres threads" # qt3
+inherit eutils flag-o-matic 
+# qt3
 
 DESCRIPTION="A freely available and fully compliant implementation of the CORBA standard"
 HOMEPAGE="http://www.mico.org/"
 SRC_URI="http://www.mico.org/${P}.tar.gz"
+
 LICENSE="GPL-2 LGPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
+IUSE="gtk postgres ssl tcl threads" # qt3
 
 DEPEND=">=sys-devel/flex-2.5.2
 	>=sys-devel/bison-1.22
@@ -32,30 +33,26 @@ src_compile() {
 		myopts="${myopts} --enable-threads=no --enable-pthreads=no"
 	fi
 
-	use ssl && myopts="${myopts} --with-ssl=/usr" \
-		|| myopts="${myopts} --without-ssl"
-	use tcl && myopts="${myopts} --with-tcl=/usr" \
-		|| myopts="${myopts} --without-tcl"
-# 	use qt3 && myopts="${myopts} --with-qt=${QTDIR}" \
-# 		|| myopts="${myopts} --without-qt"
-	use gtk && myopts="${myopts} --with-gtk=/usr" \
-		|| myopts="${myopts} --without-gtk"
-	use postgres && myopts="${myopts} --with-pgsql=/usr" \
-		|| myopts="${myopts} --without-pgsql"
+	append-flags -fno-strict-aliasing
 
-	econf ${myopts} || die "configure failed"
-
+	econf ${myopts} \
+		$(use_with ssl ssl /usr) \
+		$(use_with tcl tcl /usr) \
+		$(use_with gtk gtk /usr) \
+		$(use_with postgres pgsql /usr)
+		# $(use_with qt3 qt ${QTDIR}
+	
 	# Rather not emake here, as is a memory hog
 	make || die "make failed"
 }
 
 src_install() {
-	emake INSTDIR="${D}"/usr SHARED_INSTDIR="${D}"/usr install || die
+	emake INSTDIR="${D}"/usr SHARED_INSTDIR="${D}"/usr install || die "install failed"
 
 	dodir /usr/share/
 	mv "${D}"/usr/man "${D}"/usr/share
-	dodir /usr/share/doc/
-	mv "${D}"/usr/doc "${D}"/usr/share/doc/"${P}"
+	dodir /usr/share/doc/${PF}
+	mv "${D}"/usr/doc "${D}"/usr/share/doc/${PF}
 
-	dodoc CHANGES* CONVERT FAQ INSTALL* LICENSE* MANIFEST README* ROADMAP TODO VERSION
+	dodoc BUGS CHANGES* CONVERT FAQ README* ROADMAP TODO VERSION WTODO
 }
