@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Nov 2007; Jakub Moc <jakub@gentoo.org> mico-2.3.12.ebuild:
+  Fix coding style, do not install useless docs, cosmetics
+
   02 Nov 2007; Oliver Borm (boroli) <oli.borm@web.de> +metadata.xml,
   +mico-2.3.12.ebuild:
   Ebuild for bug 122141; Need mico for the soon coming OpenFOAM ebuild; Asked
